[project]
name = "energy_aware_models"
version = "0.1.0"
description = "Energy-aware model chaining project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Christian Bouche", email="bouchec@gmail.com" }
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
